--- a/style.css
+++ b/style.css
@@ -1,82 +1,100 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
-    font-size: 8px;
+    background-image: url("/2f0f0b4f2c93a5b88240737cdebcfeda.jpg");
     display: flex;
-    width: 100%;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Quicksand;
-    height: 100vh;
-    max-height: 100vh;
-    overflow: hidden;
-}
-#digitacao {
-    display: flex;
-    margin-bottom: 4vh;
-    text-align: center;
-    overflow: auto;
-    position: relative;
-    justify-content: center;
     align-items: center;
-    align-content: center;
-    width: 20em;
-    height: 44vh;
-    max-height: 44vh;
-    font-size: 3em;
+    font-family: "Raleway";
 }
+
+#testeDeDigitacao{
+    background: linear-gradient(135deg, #FFFFFF 0%, #FFC3C9 51%, #FFF6F8 100%);
+    padding: 50px;
+    border-radius: 20px;
+    display: grid;
+    width: 50%;
+    justify-content: center;
+    align-content: center;
+    margin: auto;
+    margin-top: 50px;
+}
+h1 {
+    margin: 0px;
+    text-align: center;
+}
+
+#resultados {
+    display: flex;
+    font-size: 2.5em;
+    margin: 30px auto auto auto;
+    width: 500px;
+    justify-content: space-around;
+    
+}
+
+#caixaDeTexto {
+    width: 590px;
+    margin: auto;
+    background-color: white;
+    border: 2px solid;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#digitando {
+    padding: 15px;
+    font-size: 1.5em;
+    border-radius: 8px;
+}
+
+.actual {
+    color: cyan;
+    border-radius: 8px;
+    background-color: #006666;
+}
+
 #teclado {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    box-sizing: border-box;
-    border-radius: 4px;
-    background: #ccc;
-    border: 0.2em solid #888b8d;
-    text-align: center;
-    font-family: Quicksand;
+    padding: 5px;
+    width: 590px;
+    margin: auto;
+    border-radius: 8px;
+    background-color: rgb(224, 158, 211);
+    box-shadow: 10px 10px 5px rgb(112, 69, 69);
 }
 
-body kbd {
-    flex: 1;
-    line-height: 3.2em;
-    height: 3.2em;
-    width: 3.2em;
-    margin: 0.25em;
+.tecla {
+    width: 50px;
+    height: 50px;
     text-align: center;
-    color: #fff;
-    background-color: #53565a;
-    transition: background, position, top, box-shadow 0.1s;
-    box-shadow: 0px 2px 0px #888b8d;
+    display: inline-block;
+    border: 1px solid;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 2px 2px 0px 0px rgb(112, 69, 69);
 }
 
-body .linha_teclado {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    width: 100%;
+.teclaEsp {
+    border: 1px solid;
+    width: 275px;
+    height: 50px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 2px 2px 0px 0px rgb(112, 69, 69);
 }
-#teclado{
-    width: 56em;
-    padding: 0.4em 0.4em 0.8em;
-    box-shadow: 0 0.4em 0 #888b8d;
+
+#fila1 {
+    margin: 5px;
 }
-body #teclado kbd.longo {
-    flex-grow: 1;
-    flex: 2;
+
+#fila2 {
+    margin: 5px;
+    padding-left: 15px;
 }
-body #teclado kbd.maior {
-    flex-grow: 2;
-    flex: 3;
+
+#fila3 {
+    margin: 5px;
+    padding-left: 35px;
 }
-body #teclado kbd.barra_espaco {
-    flex-grow: 14;
-    flex: 6;
-}
-body #teclado .tecla_operacao {
-    text-transform: none !important;
+
+#fila4 {
+    padding-left: 150px;
 }
